# scribble

./: .gitignore  CHANGELOG.md  CMakeLists.txt  COMMANDS.md  CONTRIBUTING.md  DOWNLOAD.md  INFO.txt  LICENSE  LICENSE.md  QUICKSTART.md  README.md  SETUP.md  attributes.json  file.tmp  install.bat  install.sh  launcher.bat  launcher.sh  package.json  release.yml  ses
attributes/canvas/: Cargo.toml
attributes/canvas/src/: lib.rs
attributes/file/: Cargo.toml
attributes/file/src/: lib.rs
attributes/math/: Cargo.toml
attributes/math/src/: lib.rs
attributes/string/: Cargo.toml
attributes/string/src/: lib.rs
attributes/system/: Cargo.toml
attributes/system/src/: lib.rs
attributes/time/: Cargo.toml
attributes/time/src/: lib.rs
compiler/: CMakeLists.txt
compiler/include/: codegen.h  lexer.h  parser.h
compiler/src/: codegen.cpp  lexer.cpp  main.cpp  parser.cpp
examples/: hello.cpp  hello.scrib
headers/: canvas.header  file.header  math.header  string.header  system.header  time.header
scripts/: build.sh  check.sh  cleanup.sh  compile.sh  lint.sh  test.sh  tree.sh
src/: asm_helper.S  hello.c  main.cpp
